a few more fixes

--- a/index.html
+++ b/index.html
@@ -92,13 +92,20 @@
           background-color: #f9f9f9;
         }
       }
+
+      pre {
+        max-width: 50vw;
+        white-space: pre-wrap;
+        margin: 10px auto;
+        border: 3px solid #000;
+        border-radius: 10px;
+      }
     </style>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=0.75" />
     <title>Vite + Svelte</title>
   </head>
   <body>
-    <div id="userscript-app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
