show a warning when JS/cookies are disabled

--- a/index.html
+++ b/index.html
@@ -107,5 +107,8 @@
   </head>
   <body>
     <script type="module" src="/src/main.js"></script>
+  <noscript>
+    This page & userscript requires JavaScript to run.
+  </noscript>
   </body>
 </html>
